# ChangeLog for net-fs/samba-client
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-fs/samba-client/ChangeLog,v 1.17 2009/10/29 20:38:16 patrick Exp $

*samba-client-3.4.3 (29 Oct 2009)

  29 Oct 2009; Patrick Lauer <patrick@gentoo.org>
  -samba-client-3.3.8.ebuild, -samba-client-3.4.2.ebuild,
  +samba-client-3.4.3.ebuild:
  Bump, remove old

  24 Oct 2009; Tobias Klausmann <klausman@gentoo.org>
  samba-client-3.3.8.ebuild:
  Keyworded on alpha, bug #285952

*samba-client-3.4.2-r1 (23 Oct 2009)

  23 Oct 2009; Patrick Lauer <patrick@gentoo.org>
  +samba-client-3.4.2-r1.ebuild:
  Fixing autotools usage for #288536

*samba-client-3.3.9 (22 Oct 2009)

  22 Oct 2009; Patrick Lauer <patrick@gentoo.org>
  +samba-client-3.3.9.ebuild:
  Bump. fixes #289600

  11 Oct 2009; Tiziano Müller <dev-zero@gentoo.org>
  samba-client-3.4.2.ebuild:
  Added version to samba-libs dep.

  10 Oct 2009; Patrick Lauer <patrick@gentoo.org> samba-client-3.4.2.ebuild:
  Fixing description

  10 Oct 2009; Patrick Lauer <patrick@gentoo.org>
  -samba-client-3.3.7.ebuild:
  Remove old

*samba-client-3.4.2 (09 Oct 2009)

  09 Oct 2009; Patrick Lauer <patrick@gentoo.org>
  +samba-client-3.4.2.ebuild, +files/samba-3.4.2-add-zlib-linking.patch,
  +files/samba-3.4.2-fix-samba4-automake.patch,
  +files/samba-3.4.2-insert-AC_LD_VERSIONSCRIPT.patch,
  +files/samba-3.4.2-lib.tevent.python.mk,
  +files/samba-3.4.2-missing_includes.patch,
  +files/samba-3.4.2-upgrade-tevent-version.patch, metadata.xml:
  Bump to 3.4.2. Many new useflags and features. Ebuilds based on
  modifications by Marcel Greter, bug #231273

  03 Oct 2009; Markus Meier <maekke@gentoo.org> samba-client-3.3.7.ebuild:
  add ~arm, bug #285952

*samba-client-3.3.8 (02 Oct 2009)

  02 Oct 2009; Patrick Lauer <patrick@gentoo.org>
  +samba-client-3.3.8.ebuild:
  Bump

  30 Sep 2009; Jeroen Roovers <jer@gentoo.org> samba-client-3.3.7.ebuild:
  Marked ~hppa (bug #285952).
