@@ -1,6 +1,10 @@
 # ChangeLog for net-fs/samba-client
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-fs/samba-client/ChangeLog,v 1.17 2009/10/29 20:38:16 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-fs/samba-client/ChangeLog,v 1.18 2009/11/04 11:34:58 patrick Exp $
+
+  04 Nov 2009; Patrick Lauer <patrick@gentoo.org>
+  -samba-client-3.4.2-r1.ebuild:
+  Remove old
 
 *samba-client-3.4.3 (29 Oct 2009)
 
